--- a/main_app/templates/bats/detail.html
+++ b/main_app/templates/bats/detail.html
@@ -55,7 +55,7 @@
 <div class="row">
 	<div class="col s6">
 		<h3>{{ bat.name }}'s Victims</h3>
-		{% if bat.victimss.count %}
+		{% if bat.victims.count %}
 		{% for victim in bat.victims.all %}
 		<div class="card">
 			<div class="card-content">
